--- a/k8s/01.md
+++ b/k8s/01.md
@@ -1,3 +1,9 @@
+k9s
+`:` switch between components
+`/` filter or search
+`control+a` list all commands alias
+
+
 https://www.youtube.com/watch?v=s_o8dwzRlu4&list=PLy7NrYWoggjxtN4YbSMYFFdpaxb-fR4zC&index=9
 4:38
 
