--- a/k8s/01.md
+++ b/k8s/01.md
@@ -4,6 +4,15 @@ k9s
 `control+a` list all commands alias
 
 
+## Why container orchestration tool is necessary
+What if you have 20 or 30 containers running?
+* resources still available?
+* schedule next container?
+* are containers crashed?
+* remove multiple replicas?
+
+AWS ECR, docker hub of AWS
+
 https://www.youtube.com/watch?v=s_o8dwzRlu4&list=PLy7NrYWoggjxtN4YbSMYFFdpaxb-fR4zC&index=9
 4:38
 
