--- a/B站/通俗统计学原理入门/正太分布&中心极限定理.md
+++ b/B站/通俗统计学原理入门/正太分布&中心极限定理.md
@@ -202,3 +202,5 @@ $F=\frac{S_1^2}{S_2^2}$ $X_1$样本容量$n_1=20$ 分子自由度 Df=19 $X_2$样
 
 ### 正篇 19 Paired t Test
 某班英语老师 20个同学 学期开始一次摸底考试 pre-test, 上了一学期的课 再摸底 post-test
+
+![paired](./paired.png)
