--- a/NLP/08情感分析.md
+++ b/NLP/08情感分析.md
@@ -1,6 +1,64 @@
-# 情感分析
+# 情感分析简介
 潜在的消费者在购买某个产品或者服务时获取相关的评论可以作为决策参考， 政府部门也可以浏览公众对新闻事件或政策的看法了解舆情。 这些主观性的文本对于决策者制定商业策略或者决策都非常重要， 而以往仅靠人工监控分析的方式不仅耗费大量人工成本，而且有很强的滞后性。 因此采用计算机自动化情感分析称为目前学术界和工业界的大趋势。 目前，情感分析在实际生产场景中得到越来越多的应用。
 * 舆情数据 舆情分析
 * 分类算法
 * RNN
-* LSTM              
+* LSTM
+
+# 情感分析应用
+1. 电子商务
+2. 舆情分析
+3. 市场呼声
+4. 消费者呼声
+
+# 情感分析的基本方法
+根据分析载体的不同，情感分析会涉及到很多主题，包括电影评论、商品评论，以及新闻和博客等的情感分析。 大多数情感分析研究都使用机器学习方法。
+对情感分析的研究到目前为止主要集中在两个方面:
+* 识别给定的文本实体是主观的还是客观的
+* 识别主观的文本极性
+    * 文本可以划分为 积极 和 消极 两类
+    * 或者 积极 消极 中性(或者不相关)的多类
+
+情感分析的方法主要分为:
+* 词法分析
+* 基于机器学习的分析
+* 混合分析
+## 3.1 词法分析
+词法分析运用了由预标记词汇组成的字典，使用词法分析器将输入文本转换为单词序列。 将每一个新的单词与字典中的词汇进行匹配。如果有一个积极的匹配，分数加到输入文本的分数总池中。 相反，如果有一个消极的匹配，输入文本的总分会减少。虽然这项技术感觉有些业余，但已被证明是有价值的。 
+
+文本的分类取决于文本的总得分。目前有大量的工作致力于度量词法信息的有效性。对于单个短语， 通过手动标记词汇(仅包含形容词)的方式，大概能达到 85% 的准确性。这是由评价文本的主观性所决定的。
+
+词法分析也存在一个不足:其性能(时间复杂度和准确率)会随着字典大小(词汇的数量)的增加而迅速下降
+
+## 3.2 机器学习方法
+在情感分析中，主要使用的是监督学习方法。在训练过程中，需要提供一个标记语料库作为训练数据。 分类器使用一系列特征向量对目标数据进行分类。
+
+通常来说，unigram(单个短语)、bigrams(两个连续的短语)、trigrams(三个连续的短语)都可以被选为特征向量。 当然还有其他一些特征，如积极词汇的数量、消极词汇的数量、文档的长度等。
+
+支持向量机(SVM)、朴素贝叶斯(NB)算法、卷积神经网络(CNN)等都可以作为分类器使用。
+
+机器学习技术面临很多挑战:分类器的设计、训练数据的获取、对一些未见过的短语的正确解释。 相比词汇分析方法，它在字典大小呈指数增长的时候依然工作得很好。
+
+## 3.3 混合分析
+情感分析研究的进步吸引大量研究者开始探讨将两中方法进行组合的可能性，即可以利用机器学习方法的高准确性， 又可以利用词法分析快速的特点。
+
+有研究者利用由两个词组成的词汇和一个未标记的数据，将这些由两个词组成的词汇划分为积极的类和消极的类。 利用被选择的词汇集合中的所有单词产生一些伪文件。然后计算伪文件与未标记文件之间的余弦相似度。 根据相似度将该文件划分为积极的或消极的情感。之后这些训练数据集被送入朴素贝叶斯分类器进行训练。
+有研究者使用背景词法信息作为单词类关联，提出了一种统一的框架，设计了一个 Polling 多项式分类器(PMC, 多项式朴素贝叶斯)， 在训练中融入了手动标记数据，利用词法之后后性能得到了提高
+
+# 情感分析示例
+在 NLP 中，情感分析是 一段文字 表达的 情绪状态
+* 一段文本[输入]:可以是一个句子、一个段落、一个文档
+* 情感状态[输出]:可以是两类，也可以是多类
+
+在 NLP 问题中，情感分析可以被归类为文本分类问题，主要涉及两个问题:
+* 文本表达(特征提取)
+    * BOW(词袋模型)
+    * topic model(主题模型)
+    * word2vec
+* 文本分类
+    * SVM: 支持向量机 (SVM) 是一种分类算法，它通过找到一个超平面来将数据分为两类。SVM 可以处理线性和非线性数据，并且具有较好的泛化能力
+    * NB: 朴素贝叶斯 (NB) 是一种分类算法，它基于贝叶斯定理来计算每个类别的概率。NB 简单易用，但在处理高维数据时可能不太准确
+    * LR: 逻辑回归 (LR) 是一种分类算法，它通过学习数据的权重来计算每个类别的概率。LR 简单易用，并且在处理高维数据时也具有较好的准确性
+    * CNN: 卷积神经网络 (CNN) 是一种图像处理算法，它通过卷积操作来提取图像的特征。CNN 在图像分类、目标检测等任务中表现出色
+    * RNN: 循环神经网络 (RNN) 是一种处理序列数据的算法，它通过循环连接来处理数据中的时序信息。RNN 在自然语言处理、语音识别等任务中得到了广泛应用
+    * LSTM(Long Short Term Memory): 长短期记忆 (LSTM) 是一种 RNN 的变体，它具有更好的记忆能力。LSTM 在处理长距离依赖关系的数据时表现出色
